--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,12 @@
             <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper-examples</artifactId>
+            <version>3.1.0</version>
+        </dependency>
     </dependencies>
 
     <build>
